fixed bug of popup on safari

--- a/UI/src/dashboard/login/login.scss
+++ b/UI/src/dashboard/login/login.scss
@@ -1,6 +1,10 @@
 @import '../../sass/_colors.scss';
 @import '../../sass/_fonts.scss';
 
+.loginModal{
+    z-index: 10 !important;
+}
+
 .panel{
     width: 330px;
     height: 175px;
